Document compile and run scripts.